--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 node_modules/
 .DS_Store
+.env
+dist/
+build/
+.vscode/
+.idea/
+coverage/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
+*.tsbuildinfo
+.cache/
+*.local
