--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,44 @@
+# Dependencies
 node_modules/
-.DS_Store
-.env
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Next.js
+/.next/
+/out/
+
+# Production
+/build
 dist/
-build/
-.vscode/
-.idea/
-coverage/
+
+# Misc
+.DS_Store
+*.pem
+
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-*.log
+
+# Local env files
+.env
+.env*.local
+.env.production
+
+# Vercel
+.vercel
+
+# TypeScript
 *.tsbuildinfo
-.cache/
-*.local
+next-env.d.ts
+
+# Old files (Express.js version)
+index.js
+public/index.html
+public/components/
+
+# Uploads
+public/uploads/
